# Approximate-graph-neural-network

./: README.md
implementation/: ApproximateMultiplication.py  CMakeLists.txt  DRALM.c  build.sh  custom_convolution.py  gnn.py  op.cpp  test.py
